fix: supprimer le double header CORS Access-Control-Allow-Origin
WebMvc et Security ajoutaient chacun ACAO (valeur invalide pour le navigateur). CORS unique via SecurityConfig avec origines explicites.

Co-authored-by: Cursor <cursoragent@cursor.com>